--- a/css/main.css
+++ b/css/main.css
@@ -417,7 +417,7 @@ a:hover {
 
 .link_tabs_container {
   display: flex;
-  padding: 30px 10px 20px; }
+  padding: 30px 10px 70px; }
   .link_tabs_container a {
     margin-right: 10px;
     background-color: #fff;
@@ -534,5 +534,247 @@ footer {
   height: 60px;
   font-family: "Roboto";
   color: #fff; }
+
+.common_header {
+  background-color: #E5E2FF;
+  width: 100%;
+  height: 214px;
+  position: relative;
+  overflow: hidden;
+  padding-top: 45px; }
+  .common_header:before {
+    position: absolute;
+    top: -39px;
+    right: 52px;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background-color: #C8C2FB;
+    content: "";
+    z-index: 10; }
+  .common_header.bg_left:before {
+    right: unset;
+    left: 15%;
+    top: -107px; }
+  .common_header:after {
+    content: "";
+    width: 138%;
+    height: 246px;
+    background: #fff;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -200px;
+    z-index: 10;
+    border-radius: 61% 61% 0% 0%; }
+  .common_header .common_header_body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; }
+    .common_header .common_header_body .title {
+      font-size: 40px;
+      color: #5642EC; }
+    .common_header .common_header_body .breadcamp a {
+      color: #2C3E50;
+      font-size: 16px;
+      font-family: 'Roboto';
+      position: relative; }
+      .common_header .common_header_body .breadcamp a:not(:last-child) {
+        margin-right: 20px; }
+        .common_header .common_header_body .breadcamp a:not(:last-child):after {
+          background-image: url("../images/angle-up.svg");
+          background-position: center;
+          position: absolute;
+          top: 5px;
+          right: -18px;
+          width: 10px;
+          height: 12px;
+          background-size: contain;
+          content: "";
+          background-repeat: no-repeat; }
+
+.blog_fluid {
+  width: 100%; }
+  .blog_fluid .blog_container {
+    display: flex; }
+    .blog_fluid .blog_container .blog_left_fluid {
+      flex-grow: 1; }
+      .blog_fluid .blog_container .blog_left_fluid .blog_main_body {
+        background-color: #fff;
+        box-shadow: 0px 0px 13px 2px #00000036;
+        border-radius: 10px;
+        overflow: hidden;
+        margin-bottom: 20px; }
+        .blog_fluid .blog_container .blog_left_fluid .blog_main_body:hover .blog_title a {
+          color: #5642EC !important; }
+        .blog_fluid .blog_container .blog_left_fluid .blog_main_body:hover .blog_readmore a {
+          background-color: #5642EC !important;
+          border-color: #5632EC !important;
+          color: #fff !important; }
+          .blog_fluid .blog_container .blog_left_fluid .blog_main_body:hover .blog_readmore a svg path {
+            fill: #fff !important; }
+        .blog_fluid .blog_container .blog_left_fluid .blog_main_body .blog_info_wrapper {
+          padding: 30px 30px 40px 30px; }
+          .blog_fluid .blog_container .blog_left_fluid .blog_main_body .blog_info_wrapper .blog_title {
+            margin: 15px 0;
+            font-size: 24px;
+            line-height: 30px;
+            transition: all .4s; }
+            .blog_fluid .blog_container .blog_left_fluid .blog_main_body .blog_info_wrapper .blog_title a {
+              color: #2C3E50; }
+          .blog_fluid .blog_container .blog_left_fluid .blog_main_body .blog_info_wrapper .blog_text {
+            color: #2C3E50;
+            font-size: 16px;
+            font-family: "Roboto"; }
+          .blog_fluid .blog_container .blog_left_fluid .blog_main_body .blog_info_wrapper .blog_readmore {
+            display: inline-block;
+            margin-top: 20px; }
+            .blog_fluid .blog_container .blog_left_fluid .blog_main_body .blog_info_wrapper .blog_readmore a {
+              background: #fff;
+              border-radius: 20px;
+              padding: 7px 14px;
+              display: flex;
+              align-items: center;
+              color: #5642EC;
+              border: 1px solid #5642EC;
+              transition: all .4s; }
+              .blog_fluid .blog_container .blog_left_fluid .blog_main_body .blog_info_wrapper .blog_readmore a span {
+                margin-right: 10px; }
+              .blog_fluid .blog_container .blog_left_fluid .blog_main_body .blog_info_wrapper .blog_readmore a svg path {
+                fill: #5642EC;
+                transition: all .4s; }
+        .blog_fluid .blog_container .blog_left_fluid .blog_main_body .blog_header_info_fluid {
+          display: flex; }
+          .blog_fluid .blog_container .blog_left_fluid .blog_main_body .blog_header_info_fluid .blog_header_info {
+            display: flex;
+            align-items: center;
+            position: relative; }
+            .blog_fluid .blog_container .blog_left_fluid .blog_main_body .blog_header_info_fluid .blog_header_info * {
+              color: #2C3E50;
+              opacity: 0.7;
+              font-family: "Roboto"; }
+            .blog_fluid .blog_container .blog_left_fluid .blog_main_body .blog_header_info_fluid .blog_header_info svg {
+              margin-right: 5px; }
+            .blog_fluid .blog_container .blog_left_fluid .blog_main_body .blog_header_info_fluid .blog_header_info:not(:last-child) {
+              margin-right: 40px; }
+              .blog_fluid .blog_container .blog_left_fluid .blog_main_body .blog_header_info_fluid .blog_header_info:not(:last-child):after {
+                position: absolute;
+                content: "";
+                height: 19px;
+                width: 1px;
+                top: 4px;
+                right: -18px;
+                background-color: #707070; }
+      .blog_fluid .blog_container .blog_left_fluid .blog_img {
+        width: 100%;
+        height: 420px; }
+        .blog_fluid .blog_container .blog_left_fluid .blog_img a {
+          width: 100%;
+          height: 100%;
+          display: block; }
+          .blog_fluid .blog_container .blog_left_fluid .blog_img a img {
+            width: 100%;
+            object-fit: cover;
+            height: 100%; }
+    .blog_fluid .blog_container .blog_right_fluid {
+      width: 100%;
+      max-width: 350px;
+      flex: 0 0 350px;
+      margin-left: 30px; }
+      .blog_fluid .blog_container .blog_right_fluid .top_story_fluid {
+        margin-top: 20px;
+        border-radius: 20px;
+        border: 1px solid #E5E5E5;
+        padding: 30px 20px 0px 20px; }
+        .blog_fluid .blog_container .blog_right_fluid .top_story_fluid .title {
+          font-size: 32px;
+          color: #2C3E50;
+          margin-bottom: 25px; }
+        .blog_fluid .blog_container .blog_right_fluid .top_story_fluid .top_story_container {
+          padding-bottom: 20px;
+          margin-bottom: 25px; }
+          .blog_fluid .blog_container .blog_right_fluid .top_story_fluid .top_story_container:not(:last-child) {
+            border-bottom: 1px solid #E5E5E5; }
+          .blog_fluid .blog_container .blog_right_fluid .top_story_fluid .top_story_container .top_story_date {
+            margin: 10px 0;
+            display: flex;
+            align-items: center; }
+            .blog_fluid .blog_container .blog_right_fluid .top_story_fluid .top_story_container .top_story_date * {
+              font-family: 'Roboto';
+              color: #2C3E50;
+              opacity: .7; }
+            .blog_fluid .blog_container .blog_right_fluid .top_story_fluid .top_story_container .top_story_date span {
+              margin-left: 10px; }
+          .blog_fluid .blog_container .blog_right_fluid .top_story_fluid .top_story_container .top_story_text * {
+            color: #2C3E50; }
+          .blog_fluid .blog_container .blog_right_fluid .top_story_fluid .top_story_container .top_story_img {
+            width: 100%;
+            height: 182px;
+            border-radius: 15px;
+            overflow: hidden; }
+            .blog_fluid .blog_container .blog_right_fluid .top_story_fluid .top_story_container .top_story_img a {
+              display: block;
+              height: 100%;
+              width: 100%; }
+              .blog_fluid .blog_container .blog_right_fluid .top_story_fluid .top_story_container .top_story_img a img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover; }
+      .blog_fluid .blog_container .blog_right_fluid .search_fluid {
+        width: 100%;
+        height: 120px;
+        border: 1px solid #E5E5E5;
+        border-radius: 15px;
+        display: flex;
+        align-items: center;
+        justify-content: center; }
+        .blog_fluid .blog_container .blog_right_fluid .search_fluid form {
+          position: relative;
+          width: 100%;
+          max-width: 312px; }
+          .blog_fluid .blog_container .blog_right_fluid .search_fluid form input {
+            max-width: 100%;
+            height: 60px;
+            border-radius: 30px;
+            box-shadow: 0px 0px 13px 2px #00000036;
+            color: #566573;
+            font-size: 20px;
+            padding-left: 23px;
+            width: 100%; }
+            .blog_fluid .blog_container .blog_right_fluid .search_fluid form input::placeholder {
+              color: #566573;
+              font-size: 20px; }
+          .blog_fluid .blog_container .blog_right_fluid .search_fluid form button {
+            position: absolute;
+            border-radius: 50%;
+            background-color: #5642EC;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 50px;
+            height: 50px;
+            top: 4px;
+            right: 6px;
+            cursor: pointer; }
+
+.common_pagination {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 40px 0 40px; }
+  .common_pagination .pagination {
+    display: flex; }
+    .common_pagination .pagination a, .common_pagination .pagination span {
+      width: 32px;
+      height: 32px;
+      flex: 0 0 32px;
+      color: #2C3E50;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 50%;
+      border: 1px solid #F4F4F4;
+      margin-right: 10px; }
 
 /*# sourceMappingURL=main.css.map */
