--- a/sass/main.scss
+++ b/sass/main.scss
@@ -59,6 +59,7 @@ a:hover {
 .common_container {
 	max-width: 1088px;
 	margin: 0 auto;
+	width: 100%;
 }
 
 .common_padding {
@@ -212,9 +213,144 @@ a:hover {
 	    border-radius: 61% 61% 0% 0%;
 
 	}
+
+	.main_section_header {
+		max-width: 720px;
+		margin: 60px auto 25px;
+		text-align: center;
+		.title {
+			color: #5642EC;
+			font-size: 40px;
+		}
+
+		.text{
+			color: #2C3E50;
+			opacity: 0.6;
+		}
+	}
+
+	.home_slider {
+		max-width: 700px;
+		margin: 0 auto;
+		overflow: hidden;
+	/*.slick-current + .slick-active{
+		transform: scale(1) !important;
+		opacity: 1 !important;
+	}*/
+/*
+		.slick-current +.slick-active {
+    -webkit-transform: scale(1.25);
+    -moz-transform: scale(1.25);
+    transform: scale(1.25);
+}*/
+
+		.home_slider_item {
+			padding: 27px 0 10px;
+			transition: all .4s;
+			/*opacity: 0.3;
+			transform: scale(0.7);*/
+			.home_slide_item_wrapper {
+				width: 180px;
+			flex: 0 0 180px;
+			height: 180px;
+			background-color: #DF0E14;
+			border-radius: 50%;
+			margin: 0 auto;
+			display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+
+ 
+
+    	.casino_list_button {
+    		position: absolute;
+    		bottom: 0;
+    		a {
+    			border-radius: 20px;
+    		}
+    	}
+    .item_center_title {
+					text-align: center;
+					color: #fff;
+					margin: 6px 0;
+				}
+			.item_title_cont {
+				display: flex;
+			    align-items: center;
+				
+				svg {
+					width: 42px;
+					height: 42px;
+					margin-right: 2px;
+				}
+
+				
+
+			    .item_title {
+			    	text-align: center;
+			    	span:first-child{
+				    	color: #fff;
+					    font-size: 40px;
+					    display: block;
+					    line-height: 34px;
+			    	}
+
+			    	span:last-child {
+			    		color: #fff;
+					    display: block;
+					    font-size: 15px;
+					    line-height: 14px;
+			    	}
+			    }
+				}
+			}
+			
+		}
+	}
 }
 
+   .top_star {
+    	width: 60px;
+    	height: 60px;
+    	border: 2px solid #D3CFFB;
+    	border-radius: 50%;
+    	background-color: #fff;
+    	position: absolute;
+    	top: -20px;
+   		right: 4px;
+    	display: flex;
+    	align-items: center;
+    	justify-content: center;
 
+    	&:after{
+    		background-image:url("../images/lines.svg");
+    		position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(
+-96deg);
+    content: "";
+    width: 85%;
+    height: 84%;
+    background-repeat: no-repeat;
+    background-size: contain;
+    	}
+
+    	span {
+    		color: #2C3E50;
+    		font-size: 22px;
+    		font-weight: bold;
+    		position: relative;
+    		z-index: 10;
+    	}
+
+    	svg {
+    		position: relative;
+    		z-index: 10;
+    	}
+    }
 .main_body {
 
 
@@ -292,7 +428,6 @@ a:hover {
 		flex: 0 0 200px;
 		border-radius: 10px;
 		overflow: hidden;
-		background: green;
 
 		a {
 
@@ -310,25 +445,7 @@ a:hover {
 
 	}
 
-	.casino_list_info {
 
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-		width: 100%;
-   		 max-width: 340px;
-   		 margin: 0 15px;
-
-		 * {
-		 	font-family: "Roboto";
-		 	color: #2C3E50;
-		 }
-		 .bold_title {
-		 	font-size: 32px;
-		 	font-weight: bold;
-		 }
-	}
 
 	.casino_list_li {
 		flex-grow: 1;
@@ -354,10 +471,37 @@ a:hover {
 		margin-bottom: 30px;
 	}
 }
+	.casino_list_info {
 
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		width: 100%;
+   		 max-width: 340px;
+   		 margin: 0 15px;
+
+		 * {
+		 	font-family: "Roboto";
+		 	color: #2C3E50;
+		 }
+		 .bold_title {
+		 	font-size: 32px;
+		 	font-weight: bold;
+		 }
+	}
 .casino_list_links {
 
 
+
+
+	.star_review {
+		text-align: center;
+		font-size: 14px;
+		color: #2C3E50;
+	}
+
+}
 	.casino_list_button {
 
 		a {
@@ -378,15 +522,6 @@ a:hover {
 			}
 		}
 	}
-
-	.star_review {
-		text-align: center;
-		font-size: 14px;
-		color: #2C3E50;
-	}
-
-}
-
 
 .star-ratings-css {
   unicode-bidi: bidi-override;
@@ -595,6 +730,9 @@ a:hover {
   	 	border-radius: 50%;
   	 	position: relative;
   	 	margin-right: 10px;
+  	 	button {
+  	 			display: none;
+  	 		}
   	 	&:after{
   	 		position:absolute;
   	 		top: 50%;
@@ -605,10 +743,12 @@ a:hover {
   	 		border-radius: 50%;
   	 		border-left: unset;
   	 		content: "";
-  	 		transform: translate(-50%,-50%);
+  	 		transform: translate(-50%,-50%) rotate(-92deg);
   	 		opacity: 0;
   	 		transition: all .4s;
-  	 		background-image: url("../images/Ellipse 9.png");
+  	 		background-image: url("../images/round.svg");
+
+
   	 	}
   	 	&.slick-active {
   	 		background-color: #5642EC;
@@ -866,7 +1006,15 @@ footer {
     		top: -107px;
     	}
     }
-
+    &.bg_right_bottom {
+    	height: 325px;
+    	&:before{
+    		top:unset;
+    		left: unset;
+    		right: -6%;
+    		bottom: 2%;
+    	}
+    }
 
 	&:after {
     content: "";
@@ -1207,7 +1355,7 @@ footer {
 								content: "";
 							    height: 19px;
 							    width: 1px;
-							    top: 4px;
+							    top: 0px;
 							    right: -18px;
 								background-color: #707070;
 							}
@@ -1549,4 +1697,827 @@ background-image:
 			}
 		}
 	}
+}
+
+
+
+
+
+
+
+.contact_container {
+
+	max-width: 720px;
+	margin: 0 auto;
+	    padding: 70px 90px 20px;
+	    border-radius: 100px;
+	    border: 2px solid #F4F4F4;
+	    background-color: #fff;
+	    transform: translateY(-160px);
+    position: relative;
+    z-index: 1000;
+}
+
+%label-movement {
+ 
+    font-size: 12px;
+    top: 3px;
+    transition: all 0.125s cubic-bezier(0.2, 0, 0.03, 1);
+    opacity: 0.4;
+}
+
+.styled-input {
+
+  position: relative;
+  margin-bottom: 20px;
+position: relative;
+  button {
+      position: absolute;
+    bottom: 23px;
+    right: 19px;
+    border-radius: 20px;
+    background-color: #5642EC;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px 12px 6px;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+  }
+  .label_img {
+
+  	position: absolute;
+  	    top: 8px;
+    left: 9px;
+  	width: 44px;
+  	height: 44px;
+  	border: 1px solid #F4F4F4;
+  	border-radius: 50%;
+  	display: flex;
+  	align-items: center;
+  	justify-content: center;
+  	transition: all .2s;
+
+  	&.active {
+
+  		background: #5642EC;
+
+  		svg,path,circle {
+  			fill: #fff;
+  		}
+  	}
+  }
+  label {
+    color: #2C3E50;
+    position: absolute;
+    top: 13px;
+    left: 72px;
+    transition: all 0.25s cubic-bezier(0.2, 0, 0.03, 1);
+    pointer-events: none;
+  }
+  
+}
+
+input, textarea {
+      padding: 20px 72px;
+  width: 100%;
+  box-shadow: 0px 0px 8px 2px #0000001f;
+  border-radius: 35px;
+  color: #2C3E50;
+  &:focus {
+ 
+    outline: 0;
+	  ~ label {
+   
+      @extend %label-movement;
+  	}
+    ~ div {
+      // Expand across
+      display: none;
+      transition: all 0.125s cubic-bezier(0.2, 0, 0.03, 1);
+    }
+	}
+  &:valid ~ label/*, &.not-empty ~ label*/ {
+    // Keep label above field after its filled out
+    @extend %label-movement;
+  }
+}
+
+textarea {
+  // Mods needed for multiline inputs
+  width: 100%;
+  resize: none;
+  min-height: 15em;
+  padding: 28px 29px !important;
+  & ~ label {
+  	left: 30px !important;
+  }
+}
+.form_notification {
+	margin: 30px 0;
+	font-size: 16px;
+	font-family: "Roboto";
+	text-align: center;
+	color: #2ECC71;
+}
+
+
+
+
+.home_slider {
+	
+
+.home_slider .home_slide_item_wrapper {
+
+  
+  transform: translate(0, 0) scale(.4);
+  transition: all .4s ease;
+  opacity: .5;
+}
+
+
+.slick-slide.lt2 .home_slide_item_wrapper {
+  transform: translate(10%, 0) scale(.6);
+}
+.slick-slide.lt1 .home_slide_item_wrapper {
+  opacity: .7;
+  transform: translate(5%, 0) scale(.7);
+}
+.slick-slide.gt1 .home_slide_item_wrapper {
+  opacity: .7;
+  transform: translate(-5%, 0) scale(.7);
+}
+.slick-slide.gt2 .home_slide_item_wrapper {
+  transform: translate(-10%, 0) scale(.6);
+}
+.slick-slide.slick-center .home_slide_item_wrapper {
+  z-index: 1;
+  transform: scale(1);
+  opacity: 1;
+  color: #e67e22;
+}
+
+.slick-prev,
+.slick-next{
+  position: absolute;
+  top: 50%;
+  appearance: none;
+  margin-top: -10px;
+  padding: 0;
+  border: 0;
+  background: none;
+  cursor: pointer;
+  color: transparent;
+  outline: none;
+  z-index: 100;
+}
+
+.slick-prev {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 15px 15px 15px 0;
+  border-color: transparent #007bff transparent transparent;
+  left: 0;
+}
+.slick-next {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 15px 0 15px 15px;
+  border-color: transparent transparent transparent #007bff;
+  right: 0;
+}
+}
+
+
+.bk-slider {
+  position: relative;
+  /*width: 90vw;*/
+  height: auto;
+  /*padding: 50px 0 100px;*/
+}
+
+.swiper {
+  width: 100%;
+  height: 300px;
+  overflow: visible;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0px;
+  transition: all 0.3s ease;
+  opacity: 0.3;
+  transform: scale(0.7);
+
+  	.top_star {
+  		transition: all .3s;
+  		opacity: 0;
+  	}
+}
+.swiper-slide.swiper-slide-active {
+  color: #fff;
+  /*background: linear-gradient(45deg, #f69259, #f16975);*/
+  transform: scale(1.1);
+  z-index: 2;
+  opacity: 1;
+  	.top_star {
+  		opacity: 1;
+  	}
+}
+
+/* ARROWS */
+.swiper-button-prev,
+.swiper-button-next {
+  color: #f69259;
+}
+
+/* PAGINATION */
+.swiper-pagination-bullet {
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  line-height: 20px;
+  font-size: 12px;
+  color: #000;
+  opacity: 1;
+  background: rgba(0, 0, 0, 0.2);
+}
+.swiper-pagination-bullet.swiper-pagination-bullet-active {
+  color: #fff;
+  background: linear-gradient(45deg, #f69259, #f16975);
+}
+
+
+
+.swiper_progress_bar {
+
+	width: 200px;
+	margin: 0 auto;
+	height: 2px;
+	background-color: #B6ACFF;
+	position: relative;
+	border-radius: 15px;
+	.swiper_progress {
+		border-radius: 15px;
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+		height: 3px;
+		width: 0;
+		left: 0;
+		background-color: #4B409B;
+
+		&.test {
+
+		animation: anime 2.7s linear infinite;
+		}
+	}
+}
+
+
+@keyframes anime {
+
+	0%{
+		width: 0%;
+	}
+
+
+	90%{
+		width: 100%;
+	}
+
+	100% {
+		width: 100%;
+
+	}
+
+}
+
+.casino_inner_header {
+
+	height: auto;
+
+
+	&:after{
+		content:unset;
+	}
+
+	.casino_inner_main_header {
+		display: flex;
+    	align-items: flex-end;
+    	margin-top: 30px;
+
+    	.casino_inner_main_title {
+    		margin: 0 0 25px 25px;
+    		.title {
+    			color: #2C3E50;
+    			font-size: 32px;
+    		}
+    	}
+
+    	.casino_list_button {
+    		display: inline-block;
+
+    		a {
+    			border-radius: 20px !important;
+    		}
+    	}
+	}
+
+	.casino_inner_main_logo {
+		width: 230px;
+		height: 230px;
+		border: 30px solid #fff;
+		border-radius: 50%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		position: relative;
+
+		.top_star {
+			top: unset;
+			bottom: -9px;
+    		right: -29px;
+		}
+		&>img {
+
+			width: 100%;
+			height: 100%;
+			object-fit: contain;
+		}
+	}
+}
+
+
+.casino_inner_body {
+	padding-top: 40px;
+	display: flex;
+
+	.body_right {
+		flex:0 0 345px;
+		max-width: 345px;
+		margin-left: 20px;
+
+		.casino_right_cotent {
+			border-radius: 10px 50px 10px 10px;
+			background-color: #fff;
+			box-shadow: 0px 0px 8px 4px #0000001a;
+			padding: 16px 16px 90px 16px;
+			position: relative;
+			.casino_right_bg {
+				position: absolute;
+				bottom: -7px;
+				left: 50%;
+				transform: translateX(-50%);
+			}
+				.casino_right_tab {
+
+					width: 100%;
+					border-radius: 16px 60px 16px 16px;
+					border: 1px solid #DCDCDC;
+					padding: 25px 15px 35px;
+					position: relative;
+
+					&:after{
+						background-image: url("../images/lines_bg.svg");
+						content: "";
+						width: 100%;
+						height: 100%;
+						background-size: 100% 100%;
+						position: absolute;
+						top: 0;
+						left: 0;
+					}
+
+					&:not(:last-child){
+						margin-bottom:15px;
+					}
+
+					.casino_list_button {
+						    text-align: center;
+					    display: flex;
+					    justify-content: center;
+					    margin-top: 15px;
+					    position: relative;
+    				z-index: 1000;
+					}
+
+					.casino_list_info {
+						margin: 0;
+					}
+				}
+		}
+	}
+
+
+	.body_left {
+		flex-grow: 1;
+
+		.payment_method_container {
+			border-radius: 10px;
+				padding: 20px;
+				background-color: #fff;
+				margin-top: 20px;
+
+				.logo_container {
+					display: flex;
+					justify-content: space-between;
+					align-items: center;
+					margin-top: 2px;
+					img {
+						flex:0 0 15%;
+						max-width: 15%;
+						height: 57px;
+						object-fit: contain;
+					}
+				}
+
+				.payment_header {
+					display: flex;
+					justify-content: space-between;
+
+					div {
+
+						color: #2C3E50;
+
+						&.show_all{
+							color: #5642EC;
+							cursor: pointer;
+						}
+					}
+				}
+		}
+
+		.limits_fluid {
+			display: flex;
+			justify-content: space-between;
+
+			.limit_tabs_fluid {
+
+				.limit_text {
+					color: #2C3E50;
+				}
+
+				display: flex;
+
+				.limit_tab {
+					border-left: 1px solid #707070;
+					display: flex;
+					flex-direction: column;
+					padding-left: 8px;
+    				padding-right: 15px;
+
+					span {
+						color: #2C3E50;
+					}
+				}
+			}
+			&>div {
+
+				flex:0 0 47%;
+				max-width: 47%;
+				border-radius: 10px;
+				padding: 20px;
+				background-color: #fff;
+
+				.title {
+					color: #2C3E50;
+					font-size: 20px;
+					margin-bottom: 5px;
+				}
+			}
+		}
+	}
+}
+
+
+.casino_inner_fluid {
+	position: relative;
+	overflow: hidden;
+	.casino_inner_shape {
+	position: absolute;
+    top: calc(333px + 9%);
+    background-color: white;
+    left: -57vw;
+    width: 261vw;
+    border-radius: 10%;
+    height: 465vw;
+    transform: rotate(
+-12deg);
+	}
+
+	&:after{
+		content:"";
+		position: absolute;
+		top: 0;
+		left: 0;
+		    background-color: #e5e2ff;
+	    width: 100%;
+	    height: 100px;
+	}
+
+	&:before{
+
+	    content: "";
+	    position: absolute;
+	    top: 100px;
+	    left: 0;
+	    background-color: #F4F4F4;
+	    width: 100%;
+	    height:534px;
+	}
+
+	.casino_inner_container {
+		position: relative;
+		z-index: 100;
+	}
+	.long_text_fluid{
+
+
+		&.transparent {
+			padding: 0 !important;
+		}
+	}
+
+}
+
+.games_fluid {
+
+	margin: 50px 0 0px;
+	background-image: linear-gradient(to right,#E1DEFD,#988CFE);
+	padding: 50px 10px;
+
+	.games_links_wrapper {
+
+		display: flex;
+		flex-wrap: wrap;
+		max-width: 720px;
+		margin-top: 25px;
+		.games_links {
+			background-color: #fff;
+			border: 1px solid #E5E5E5;
+			border-radius: 10px;
+			padding: 10px;
+			flex: 0 0 23%;
+			max-width: 23%;
+			margin-right: 1.5%;
+			margin-bottom: 15px;
+			height: 100px;
+
+			a {
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				justify-content: center;
+				width: 100%;
+				height: 100%;
+				color: #2C3E50;
+
+				span {
+					color: #2C3E50;
+				}
+			}
+
+
+		}
+	}
+
+
+	.games_container{
+
+		.games_wrapper {
+			max-width: 720px;
+
+			.games_header {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				.title {
+				font-size: 32px;
+				color: #2C3E50;
+				margin-right: 7px;
+				}
+
+				span {
+					border-radius: 50%;
+					background-color: #fff;
+					font-size: 14px;
+					color: #2C3E50;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					width: 26px;
+					height: 26px;
+					flex:0 0 26px;
+					transform: translateY(-10px);
+				}
+			}	
+		}
+	}
+}
+
+.small_container {
+	max-width: 720px;
+}
+
+.lists_fluid {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	padding: 40px 0;
+	&>div {
+		flex:0 0 32%;
+		max-width: 32%;
+	}
+
+	.list_title {
+		font-size: 24px;
+		text-align: center;
+	}
+
+	.list_content {
+
+		ul {
+
+			li {
+				list-style-type: disc;
+				color: #2C3E50;
+				font-family: "Roboto";
+			}
+		}
+	}
+
+
+	.list_container {
+		border-radius: 13px;
+	padding: 20px 30px 25px 38px;
+
+		&.green {
+			background-color: #E8F5E9;
+			border: 1px solid #1B5E20;
+			.list_title {
+				color: #1B5E20;
+				margin-bottom: 7px;
+			}
+		}
+
+		&.purple {
+			background-color: #EDE7F6;
+			border: 1px solid #5642EC;
+			.list_title {
+				color: #5642EC;
+				margin-bottom: 7px;
+			}
+		}
+
+		&.red {
+			background-color: #FFEBEE;
+			border: 1px solid #B71C1C;
+			.list_title {
+				color: #B71C1C;
+				margin-bottom: 7px;
+			}
+		}
+	}
+
+
+}
+
+
+.review_fluid {
+
+	.review_container {
+		max-width: 904px;
+		margin: 0 auto 30px;
+		border-radius: 100px;
+		border: 1px solid #E4E4E4;
+		padding: 50px 90px;
+		background-color: #fff;
+
+		form {
+			margin-top: 40px;
+		}
+
+		.casino_start {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+
+			.star-ratings-css {
+				width: 120px;
+				&>div {
+
+				  span {
+				  	display: inline-block;
+				  	margin-right: 4px;
+				  }
+				}
+			}
+		}
+
+	}
+}
+
+.input_wrapper {
+	display: flex;
+	justify-content: space-between;
+
+	&>div {
+		flex:0 0 47%;
+		max-width: 47%;
+	}
+}
+
+
+.user_reviews_fluid {
+	padding-bottom: 80px;
+	.title {
+		font-size: 32px;
+		text-align: center;
+		color: #2C3E50;
+		margin-bottom: 25px;
+	}
+}
+
+.user_reviews_container {
+	display: flex;
+	border: 1px solid #E5E5E5;
+	border-radius: 8px;
+	min-height: 260px;
+	width: 100%;
+	overflow: hidden;
+	margin-bottom: 15px;
+
+	.user_review_left {
+		width: 176px;
+		flex:0 0 176px;
+		background-color: #2C3E50;
+		position: relative;
+
+			.user_img {
+
+				position: absolute;
+			    top: 30px;
+    			right: -68px;
+				height: 130px;
+				width: 130px;
+				border-radius: 50%;
+			    border: 10px solid #Efff;
+   				 background-color: #4F5D73;
+				padding: 10px;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+
+				&:after{
+					position:absolute;
+					border: 1px solid #E5E5E5;
+					top: 50%;
+					left: 50%;
+					transform: translate(-50%, -50%);
+					content: "";
+					width: 130px;
+					height: 130px;
+					border-radius: 50%;
+				}
+				 img {
+				 	width: 95%;
+				 	height: 95%;
+				 	object-fit: contain;
+				 }
+			}
+	}
+
+	.user_review_right {
+		flex-grow: 1;
+		padding: 30px 80px 45px 100px;
+
+
+		.username {
+			color: #2C3E50;
+			font-size: 28px;
+			margin-bottom: 8px;
+		}
+
+		.blog_header_info_fluid .blog_header_info:not(:last-child) {
+			    margin-right: 32px;
+		}
+
+		.user_review_text {
+			margin-top: 15px;
+			* {
+				font-family: "Roboto";
+				color: #2C3E50;
+			}
+		}
+	}
+
+
 }
